--- a/src/app/change-asset-status/change-asset-status.component.html
+++ b/src/app/change-asset-status/change-asset-status.component.html
@@ -1,1 +1,19 @@
-<p>change-asset-status works!</p>
+<div class="container">
+  <div class="title">
+    <h1>Asset Status Change</h1>
+  </div>
+  <form>
+    <label> Asset ID : </label>
+    <select class="form-select" aria-label="Default select example" [(ngModel)]="selectedAssetId">
+        <option selected value=""> --Select asset-- </option>
+      <option *ngFor="let data of assetID" value="{{data}}">{{data}}</option>
+    </select>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefaultActive" [(ngModel)]="assetStatus" value="true">
+      <label class="form-check-label" for="flexRadioDefaultActive">Activate</label><br>
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefaultDactive" [(ngModel)]="assetStatus" value="false">
+      <label class="form-check-label" for="flexRadioDefaultDactive">Deactivate</label>
+    </div>
+    <button type="submit" class="btn btn-primary" (click)="changeAssetStatus()">Submit </button>
+  </form>
+</div>
