Added Navbar component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
 
-
-<h1>Boat System Monitoring</h1>
-<nav>
-  <a class="button" routerLink="/asset-maintenance">Schedule Maintenance</a> |
-  <a class="button" routerLink="/change-asset-status">Change Asset Status</a>
-</nav>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
+
