--- a/src/app/change-asset-status/change-asset-status.component.html
+++ b/src/app/change-asset-status/change-asset-status.component.html
@@ -3,10 +3,10 @@
     <h1>Asset Status Change</h1>
   </div>
   <form>
-    <label> Asset ID : </label>
-    <select class="form-select" aria-label="Default select example" [(ngModel)]="selectedAssetId">
+    <label for="assetID"> Asset ID : </label>
+    <select class="form-select" aria-label="Default select example" [(ngModel)]="selectedAssetId" id="assetID">
         <option selected value=""> --Select asset-- </option>
-      <option *ngFor="let data of assetID" value="{{data}}">{{data}}</option>
+      <option *ngFor="let data of assetID" [value]="data">{{data}}</option>
     </select>
     <div class="form-check">
       <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefaultActive" [(ngModel)]="assetStatus" value="true">
