--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar sticky-top navbar-light bg-light">
-<div class="container-fluid">
-  <h2> Boat System Monitoring </h2>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+<nav class="navbar navbar-dark text bg-dark" id="brand">
+  <span class="navbar-brand mb-lg-0 h1"><h2>Boat System Monitoring</h2></span>
+</nav>
+<nav class="navbar navbar-expand-lg navbar-dark text bg-dark" id="content">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" routerLink="/asset-maintenance" routerLinkActive="active">Schedule Maintenance</a>
       </li>
@@ -10,5 +14,5 @@
         <a class="nav-link active" aria-current="page" routerLink="/change-asset-status" routerLinkActive="active">Change Asset Status</a>
       </li>
     </ul>
-  </div></div>
+  </div>
 </nav>
