--- a/src/app/schedule-maintenance/schedule-maintenance.component.css
+++ b/src/app/schedule-maintenance/schedule-maintenance.component.css
@@ -1,16 +1,11 @@
-.alert {
-  padding: 10px;
-  margin-bottom: 10px;
+.container{
+  padding-top: 40px;
 }
-
-.alert-success {
-  background-color: #d4edda;
-  color: #155724;
-  border: 1px solid #c3e6cb;
+#sub , #res{margin-top: 20px;
 }
-
-.alert-error {
-  background-color: #f8d7da;
-  color: #721c24;
-  border: 1px solid #f5c6cb;
+#sub{
+  margin-right: 20px
+}
+.title{
+  padding-bottom: 20px;
 }
