1) Removed Bootstrap and added material angular. 2) Add Nave Pane 3) Added Tables

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,32 @@
-<nav class="navbar navbar-expand-lg navbar sticky-top navbar-light bg-light">
-<div class="container-fluid">
-  <h2> Boat System Monitoring </h2>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" routerLink="/asset-maintenance" routerLinkActive="active">Schedule Maintenance</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" routerLink="/change-asset-status" routerLinkActive="active">Change Asset Status</a>
-      </li>
-    </ul>
-  </div></div>
-</nav>
+<mat-toolbar color="primary" class="mat-elevation-z8">
+  <button (click)="drawer.toggle()" mat-icon-button>
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>Boat System Monitoring</span>
+  <span class="example-spacer"></span>
+</mat-toolbar>
+<mat-drawer-container  autosize>
+  <mat-drawer #drawer opened="true" mode="side" position="start" >
+    <mat-nav-list>
+      <mat-list-item>
+        <button routerLink="/change-asset-status" mat-button><mat-icon>directions_boat</mat-icon>Change Asset Status</button>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item>
+        <button routerLink="/asset-maintenance" mat-button><mat-icon>schedule</mat-icon>Schedule Maintenance</button>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+    </mat-nav-list>
+  </mat-drawer>
+  <mat-drawer-content>
+    <div style="text-align: center;min-height: 600px;">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-drawer-content>
+</mat-drawer-container>
+
+
+
+
+
+
