--- a/src/app/change-asset-status/change-asset-status.component.html
+++ b/src/app/change-asset-status/change-asset-status.component.html
@@ -1,19 +1,23 @@
-<div class="container">
-  <div class="title">
-    <h1>Asset Status Change</h1>
-  </div>
-  <form>
-    <label for="assetID"> Asset ID : </label>
-    <select class="form-select" aria-label="Default select example" [(ngModel)]="selectedAssetId" id="assetID">
-        <option selected value=""> --Select asset-- </option>
-      <option *ngFor="let data of assetID" [value]="data">{{data}}</option>
-    </select>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefaultActive" [(ngModel)]="assetStatus" value="true">
-      <label class="form-check-label" for="flexRadioDefaultActive">Activate</label><br>
-      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefaultDactive" [(ngModel)]="assetStatus" value="false">
-      <label class="form-check-label" for="flexRadioDefaultDactive">Deactivate</label>
-    </div>
-    <button type="submit" class="btn btn-primary" (click)="changeAssetStatus()">Submit </button>
-  </form>
-</div>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <ng-container matColumnDef="assetId">
+    <th mat-header-cell *matHeaderCellDef> Asset Id </th>
+    <td mat-cell *matCellDef="let element"> {{element.assetId}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="assetName">
+    <th mat-header-cell *matHeaderCellDef> Asset Name </th>
+    <td mat-cell *matCellDef="let element"><mat-icon> directions_boat</mat-icon><span>&nbsp;</span>{{element.assetName}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef> Status </th>
+<!--    <td mat-cell *matCellDef="let element"> {{element.status}}</td>-->
+    <td mat-cell *matCellDef="let element">
+      <mat-slide-toggle color="accent"  (ngModelChange)="changeAssetStatus($event , element)"  [(ngModel)]="element.status" >{{element.status ? 'Active' : 'Inactive'}}</mat-slide-toggle></td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
