--- a/src/app/change-asset-status/change-asset-status.component.html
+++ b/src/app/change-asset-status/change-asset-status.component.html
@@ -1,23 +1,33 @@
+<section>
+  <mat-card style="margin: 1% 6% 3%;">
+    <button color="accent" mat-raised-button>Change Status of an Asset</button>
+  </mat-card>
+</section>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div style="margin: 0% 1% 4% 4%;">
+<table  mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <ng-container matColumnDef="assetId">
-    <th mat-header-cell *matHeaderCellDef> Asset Id </th>
+    <th mat-header-cell *matHeaderCellDef> Asset Id</th>
     <td mat-cell *matCellDef="let element"> {{element.assetId}} </td>
   </ng-container>
 
   <ng-container matColumnDef="assetName">
-    <th mat-header-cell *matHeaderCellDef> Asset Name </th>
-    <td mat-cell *matCellDef="let element"><mat-icon> directions_boat</mat-icon><span>&nbsp;</span>{{element.assetName}} </td>
+    <th mat-header-cell *matHeaderCellDef> Asset Name</th>
+    <td mat-cell *matCellDef="let element">
+      <mat-icon> directions_boat</mat-icon>
+      <span>&nbsp;</span>{{element.assetName}} </td>
   </ng-container>
 
   <ng-container matColumnDef="status">
-    <th mat-header-cell *matHeaderCellDef> Status </th>
-<!--    <td mat-cell *matCellDef="let element"> {{element.status}}</td>-->
+    <th mat-header-cell *matHeaderCellDef> Status</th>
+    <!--    <td mat-cell *matCellDef="let element"> {{element.status}}</td>-->
     <td mat-cell *matCellDef="let element">
-      <mat-slide-toggle color="accent"  (ngModelChange)="changeAssetStatus($event , element)"  [(ngModel)]="element.status" >{{element.status ? 'Active' : 'Inactive'}}</mat-slide-toggle></td>
+      <mat-slide-toggle color="accent" (ngModelChange)="changeAssetStatus($event , element)"
+                        [(ngModel)]="element.status">{{element.status ? 'Active' : 'Inactive'}}</mat-slide-toggle>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-
+</div>
