--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,9 @@
   <button (click)="drawer.toggle()" mat-icon-button>
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Boat System Monitoring</span>
+  <span> <button  mat-mini-fab style="margin-right: 10% ; margin-left: 10%" >
+          <mat-icon>directions_boat</mat-icon>
+        </button>Boat System Monitoring</span>
   <span class="example-spacer"></span>
 </mat-toolbar>
 <mat-drawer-container  autosize>
