--- a/src/app/change-asset-status/change-asset-status.component.html
+++ b/src/app/change-asset-status/change-asset-status.component.html
@@ -1,23 +1,24 @@
 <section>
   <mat-card style="margin: 1% 6% 3%;">
-    <button color="accent" mat-raised-button>Change Status of an Asset</button>
+    <button color="accent" mat-raised-button (click)="fetchAssetsId()">Change Status of an Asset</button>
   </mat-card>
 </section>
 
 <div style="margin: 0% 1% 4% 4%;">
 <table  mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<!--  Asset column -->
   <ng-container matColumnDef="assetId">
     <th mat-header-cell *matHeaderCellDef> Asset Id</th>
-    <td mat-cell *matCellDef="let element"> {{element.assetId}} </td>
+    <td mat-cell *matCellDef="let element "> {{element.assetId}} </td>
   </ng-container>
-
+<!-- Name Column -->
   <ng-container matColumnDef="assetName">
     <th mat-header-cell *matHeaderCellDef> Asset Name</th>
     <td mat-cell *matCellDef="let element">
       <mat-icon> directions_boat</mat-icon>
       <span>&nbsp;</span>{{element.assetName}} </td>
   </ng-container>
-
+<!-- Status Column -->
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef> Status</th>
     <!--    <td mat-cell *matCellDef="let element"> {{element.status}}</td>-->
@@ -28,6 +29,6 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns:displayedColumns"></tr>
 </table>
 </div>
