Added Progress loader on api call

--- a/src/app/sinex-serial-numbers/sinex-serial-numbers.component.html
+++ b/src/app/sinex-serial-numbers/sinex-serial-numbers.component.html
@@ -1,1 +1,4 @@
 
+<input type="file"  [(ngModel)]="selectedFile">
+<button (click)="uploadFile()">Upload</button>
+<p *ngIf="errorMessage" class="error-message">{{ errorMessage }}</p>
