--- a/src/app/change-asset-status/change-asset-status.component.html
+++ b/src/app/change-asset-status/change-asset-status.component.html
@@ -22,10 +22,7 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header> Status</mat-header-cell>
       <!--    <td mat-cell *matCellDef="let element"> {{element.status}}</td>-->
       <mat-cell *matCellDef="let element">
-        <mat-spinner style="margin-right: 10px" color="accent" *ngIf="true" diameter="2
-
-          love
-          0"></mat-spinner>
+        <ng-container *ngIf="element.loading"><mat-spinner style="margin-right: 10px" color="accent" diameter="20"></mat-spinner></ng-container>
         <mat-slide-toggle color="accent" (ngModelChange)="changeAssetStatus($event , element)"
                           [(ngModel)]="element.status">{{element.status ? 'Active' : 'Inactive'}}</mat-slide-toggle>
       </mat-cell>
