--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,8 +8,6 @@
   <span class="example-spacer"></span>
 </mat-toolbar>
 <mat-drawer-container  autosize>
-
-
   <mat-drawer #drawer opened="true" mode="side" position="start" >
     <mat-nav-list>
       <mat-list-item>
@@ -32,6 +30,8 @@
   </mat-drawer>
   <mat-drawer-content>
     <div style="text-align: center;min-height: 600px;">
+      <!-- progress bar -->
+      <mat-progress-bar mode="indeterminate" color="accent" *ngIf="loaderservice.isLoading | async"></mat-progress-bar>
       <router-outlet></router-outlet>
     </div>
   </mat-drawer-content>
