1) Added View Maintenance and Delete Maintenance logic

--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,5 +1,10 @@
-<mat-card>
-  <mat-card-title>404 - Page not found</mat-card-title>
-  <p>The requested page could not be found.</p>
-  <p>Use the left navigation menu for available operations.</p>
-</mat-card>
+<mat-grid-list cols="1" rowHeight="1:1">
+  <mat-grid-tile class="top-left">
+    <mat-card>
+      <mat-card-title><h1>404 - Page not found</h1></mat-card-title>
+      <mat-card-subtitle><h1>Sorry, the page you were looking could not be found</h1></mat-card-subtitle>
+      <mat-card-content>
+        Or you can return to our <a href="/home">Home</a>, or contact us if you can’t find what you are looking for.</mat-card-content>
+    </mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
