--- a/src/app/change-asset-status/change-asset-status.component.html
+++ b/src/app/change-asset-status/change-asset-status.component.html
@@ -1,10 +1,13 @@
 <div class="example-container mat-elevation-z8">
+
   <mat-form-field>
     <mat-label>Search asset</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Search">
   </mat-form-field>
 </div>
 <div class="example-container mat-elevation-z8">
+  <button style="position: absolute;top: 10px;right: 0;min-width: 10% ;color: whitesmoke" mat-raised-button color="accent" (click)="ngOnInit()">
+    <mat-icon  color="primary">refresh</mat-icon> Refresh Table</button>
   <mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="assetId">
       <mat-header-cell *matHeaderCellDef mat-sort-header> Asset Id</mat-header-cell>
@@ -29,8 +32,7 @@
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;">
-    </mat-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
   <mat-paginator [pageSizeOptions]="[7, 10, 25, 50]" [pageSize]="7"></mat-paginator>
 
