--- a/src/app/schedule-maintenance-view-all/schedule-maintenance-view-all.component.html
+++ b/src/app/schedule-maintenance-view-all/schedule-maintenance-view-all.component.html
@@ -4,7 +4,7 @@
     <mat-icon  color="accent">refresh</mat-icon> Refresh Table</button>
   <mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="parentAssetId">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Asset Id</mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header [(ngModel)]="selectedId"> Asset Id</mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.parentAssetId}} </mat-cell>
     </ng-container>
 
@@ -32,7 +32,7 @@
     <ng-container  matColumnDef="action">
       <mat-header-cell *matHeaderCellDef mat-sort-header></mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <button  (click)="deleteMaintenance(element)" mat-icon-button >
+        <button  (click)="deleteMaintenance(element.id)" mat-icon-button >
           <mat-icon color="accent">delete</mat-icon>
         </button>
       </mat-cell>
