Added Sinex Search component and SnackBar

--- a/src/app/sinex-serial-number-upload/sinex-serial-number-upload.component.html
+++ b/src/app/sinex-serial-number-upload/sinex-serial-number-upload.component.html
@@ -1,1 +1,4 @@
-<p>sinex-serial-number-upload works!</p>
+<div class="example-container mat-elevation-z8">
+  <input type="file" accept="text/csv">
+  <button type="submit" (click)="openSnack()">Upload</button>
+</div>
