--- a/src/app/sinex-serial-number-search/sinex-serial-number-search.component.html
+++ b/src/app/sinex-serial-number-search/sinex-serial-number-search.component.html
@@ -1,6 +1,6 @@
 <div class="example-container mat-elevation-z8"><mat-form-field>
   <mat-label >Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="AssetID" style="">
+  <input matInput (keyup)="applyFilter($event)" placeholder="AssetID" >
 </mat-form-field> </div>
 <button style="position: absolute;top: 10px;right: 0;min-width: 10% ;color: whitesmoke" mat-raised-button color="accent" (click)="ngOnInit()">
   <mat-icon  color="primary">refresh</mat-icon> Refresh Table</button>
